--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,48 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.themeleaf.org">
-<head>
-    <!-- <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content=""> -->
-    <title>DevOps Buddy</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-    <!-- Bootstrap core CSS -->
-    <link th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet" media="screen" />
-
-    <!-- Custom styles for this template -->
-    <link type="text/css" th:href="@{/css/styles.css}" rel="stylesheet" media="screen" />
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
-    <script src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
-    <![endif]-->
-</head>
+<head th:replace="common/header :: common-header" />
 
 <body>
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
-    </div>
-</div>
+<div th:replace="common/navbar :: common-navbar" />
 
 <div class="container">
 
@@ -57,7 +20,6 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<div th:replace="common/header :: before-body-scripts" />
 </body>
 </html>
