--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -16,7 +16,8 @@
 
 </head>
 <div th:fragment="before-body-scripts">
-    <script src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
-    <script src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/devopsbuddy.js}"></script>
 </div>
 </html>
