--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -8,6 +8,22 @@
 <div th:replace="common/navbar :: common-navbar" />
 
 <div class="container">
+
+    <div class="col-md-6 col-md-offset-3 text-center">
+        <div th:if="${param.error}" class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">x</span>
+            </button>
+            <p th:text="#{login.error.message}"></p>
+        </div>
+        <div th:if="${param.error}" class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">x</span>
+            </button>
+            <p th:text="#{login.error.success}"></p>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="well">
